--- a/src/register.html
+++ b/src/register.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
 <div id="wrapper">
     <div class="container">
-        <v-login></v-login>
+        <v-register></v-register>
     </div>
 </div>
 </body>
-<script src="./assets/js/login.js"></script>
+<script src="assets/js/register.js"></script>
 </html>
