--- a/src/login.html
+++ b/src/login.html
@@ -5,11 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-<div id="wrapper">
-    <div class="container">
-        <v-login></v-login>
-    </div>
-</div>
+<mxc-login></mxc-login>
 </body>
 <script src="assets/js/login.js"></script>
 </html>
